# packages

./: .gitignore  .travis.yml  CHANGES  README.md  README.rst  cabal.project  haskus-binary.cabal  haskus-utils.cabal  haskus-web.cabal  manage.sh  stack-8.10.yaml  stack-8.6.yaml  stack-8.8.yaml  stack.yaml
haskus-base/: README.md  haskus-base.cabal
haskus-base/bench/: BenchVariant.hs
haskus-base/lib/Haskus/Binary/: BitSet.hs  BufferList.hs  ByteSwap.hs  Cast.hs  Endianness.hs  Enum.hs  Int.hs  Vector.hs
haskus-base/lib/Haskus/Binary/Bits/: Put.hs  Rotate.hs
haskus-base/lib/Haskus/Binary/Serialize/: Buffer.hs  File.hs
haskus-base/lib/Haskus/Data/: Variant.hs
haskus-base/lib/Haskus/Data/Variant/: EADT.hs  EGADT.hs  Excepts.hs  Syntax.hs  VEither.hs  VariantF.hs
haskus-base/lib/Haskus/Data/Variant/EADT/: TH.hs
haskus-base/lib/Haskus/Memory/: Layout.hs  Ptr.hs  Typed.hs  Writer.hs  WriterM.hs
haskus-base/lib/Haskus/Memory/Writer/: SizedWriter.hs
haskus-base/lib/Haskus/Number/: BitNat.hs  FixedPoint.hs  Float.hs  Int.hs  Posit.hs  SignedSafe.hs
haskus-base/lib/Haskus/Utils/: Flow.hs  HArray.hs  InfList.hs  Monad.hs
haskus-base/lib/Haskus/Utils/Map/: Strict.hs
haskus-base/lib/Haskus/Utils/STM/: SnapVar.hs
haskus-base/lib/Haskus/Utils/Types/: Generics.hs  List.hs  Nat.hs
haskus-base/src/bench/: BitReverse.hs
haskus-base/src/lib/Haskus/Binary/: BitField.hs  Char.hs  Get.hs  Put.hs  Record.hs  Storable.hs  Unum.hs
haskus-base/src/lib/Haskus/Binary/Bits/: Bitwise.hs  Get.hs  Mask.hs  Order.hs  Shift.hs
haskus-base/src/lib/Haskus/Binary/Serialize/: Get.hs  Put.hs
haskus-base/src/lib/Haskus/Memory/: Property.hs  Utils.hs  View.hs
haskus-base/src/lib/Haskus/Memory/Allocator/: Malloc.hs
haskus-base/src/lib/Haskus/Number/: NaturalRange.hs  Signed.hs
haskus-base/src/lib/Haskus/Utils/: ContFlow.hs  EADT.hs  Embed.hs  Flow.hs  InfList.hs  List.hs  Maybe.hs  Monad.hs  MonadFlow.hs  MonadStream.hs  MultiState.hs  Solver.hs  Variant.hs
haskus-base/src/lib/Haskus/Utils/EADT/: TH.hs
haskus-base/src/lib/Haskus/Utils/Types/: Error.hs  Symbol.hs
haskus-base/src/tests/Haskus/Tests/: Data.hs
haskus-base/src/tests/Haskus/Tests/Data/: EADT.hs  Variant.hs
haskus-base/tests/: Main.hs
haskus-base/tests/Haskus/Tests/: Utils.hs
haskus-base/tests/Haskus/Tests/Data/: EADT.hs  Variant.hs
haskus-base/tests/Haskus/Tests/Format/Binary/: Bits.hs  Writer.hs
haskus-base/tests/Haskus/Tests/Utils/: Solver.hs
haskus-binary/: bench.sh  haskus-binary.cabal  stack.yaml
haskus-binary/bench/: BenchEmbed.hs  BenchFileEmbed.hs
haskus-binary/src/data/: README
haskus-binary/src/lib/Haskus/: Number.hs
haskus-binary/src/lib/Haskus/Binary/: BitField.hs  Bits.hs  Buffer.hs  BufferBuilder.hs  ByteSwap.hs  CTypes.hs  Cast.hs  Endianness.hs  Enum.hs  Get.hs  Int.hs  Record.hs  Serialize.hs  Union.hs  Unum.hs  Word.hs
haskus-binary/src/lib/Haskus/Binary/Bits/: Bitwise.hs  Finite.hs  Get.hs  Helper.hs  Index.hs  Mask.hs  Put.hs  Reverse.hs  Shift.hs
haskus-binary/src/lib/Haskus/Data/: Buffer.hs
haskus-binary/src/lib/Haskus/Format/: Number.hs  Text.hs
haskus-binary/src/lib/Haskus/Memory/: Buffer.hs  Embed.hs  Layout.hs  Ptr.hs  Typed.hs  Utils.hs  View.hs  Writer.hs
haskus-binary/src/lib/Haskus/Number/: BitNat.hs  FixedPoint.hs  NaturalRange.hs  Posit.hs  Signed.hs  SignedSafe.hs  VariableLength.hs  Word.hs
haskus-binary/src/lib/Haskus/Utils/: Memory.hs
haskus-binary/src/tests/: Main.hs
haskus-calculus/: haskus-calculus.cabal
haskus-calculus/src/lib/Haskus/Calculus/: App.hs  FreeVars.hs  Lambda.hs  PrettyPrint.hs  ReplaceVar.hs  Samples.hs  Var.hs
haskus-calculus/src/tests/: Main.hs
haskus-format-text/: README.md  haskus-format-text.cabal
haskus-format-text/src/lib/Haskus/Format/: Text.hs
haskus-graphics/: haskus-graphics.cabal
haskus-graphics/src/lib/Haskus/Graphics/: Color.hs  Picture.hs
haskus-locale/: haskus-locale.cabal
haskus-locale/src/data/: country-codes.csv
haskus-locale/src/lib/Haskus/Locale/: Country.hs
haskus-misc/: haskus-misc.cabal
haskus-misc/src/lib/Haskus/Format/: PDF.hs
haskus-system-examples/: cabal.project  haskus-system-examples.cabal  system.yaml
haskus-system-examples/src/demo/: Main.hs
haskus-text/: haskus-text.cabal
haskus-text/src/lib/Haskus/: Text.hs
haskus-text/src/lib/Haskus/Text/: ASCII.hs  Unicode.hs
haskus-text/src/tests/: Main.hs
haskus-time/: haskus-time.cabal  package.yaml
haskus-time/src/lib/Haskus/Time/: Calendar.hs
haskus-time/src/tests/: Main.hs
haskus-ui/: haskus-ui.cabal  package.yaml
haskus-ui/src/apps/Haskus/UI/: Test.hs
haskus-ui/src/lib/Haskus/UI/: Canvas.hs  Color.hs  Common.hs  Object.hs  Picture.hs  Ray.hs  RayTracer.hs  Renderer.hs  Sampler.hs  World.hs
haskus-ui/src/lib/Haskus/UI/Maths/: Linear.hs
haskus-utils/: CHANGES.md  haskus-utils.cabal  stack.yaml
haskus-utils-compat/: LICENSE  haskus-utils-compat.cabal  stack.yaml
haskus-utils-compat/src/lib/Haskus/Utils/: Text.hs
haskus-utils-data/: haskus-utils-data.cabal  stack.yaml
haskus-utils-data/src/lib/Haskus/Utils/: Either.hs  Functor.hs  HList.hs  List.hs  Maybe.hs  Monad.hs  Tuple.hs
haskus-utils-data/src/tests/: Main.hs
haskus-utils-types/: haskus-utils-types.cabal  stack.yaml
haskus-utils-types/src/lib/Haskus/Utils/: Types.hs
haskus-utils-types/src/tests/: Main.hs
haskus-utils-variant/: haskus-utils-variant.cabal  stack.yaml
haskus-utils-variant/examples/: MultiLam.hs  TypeFamily.hs
haskus-utils-variant/src/bench/: Main.hs
haskus-utils-variant/src/lib/Haskus/Utils/: ContFlow.hs  EADT.hs  EGADT.hs  Variant.hs  VariantF.hs
haskus-utils-variant/src/tests/: EADT.hs  Main.hs  Variant.hs
haskus-utils/src/lib/Haskus/Utils/: Dynamic.hs  Embed.hs  Flow.hs  HArray.hs  IOFlow.hs  IOVar.hs  Maths.hs  MonadFlow.hs  MonadTree.hs  MonadVar.hs  Parser.hs  STM.hs  Solver.hs  TimedValue.hs
haskus-utils/src/tests/: Main.hs
haskus-utils/src/tests/Haskus/Tests/: Utils.hs
haskus-web/: haskus-web.cabal
haskus-web/src/lib/Haskus/Web/: Files.hs  Html.hs  JQuery.hs  Page.hs  Response.hs  Server.hs
(+235 files in other folders)
