name:                haskus-web
version:             1.0
synopsis:            Haskus web
license:             BSD3
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
homepage:            http://www.haskus.org
copyright:           Sylvain Henry 2019
category:            System
build-type:          Simple
cabal-version:       1.20

description:
   Haskus web related modules

source-repository head
  type: git
  location: git://github.com/haskus/haskus-web.git

library
  exposed-modules:
    Haskus.Web.Server
    Haskus.Web.Css
    Haskus.Web.Html
    Haskus.Web.Response
    Haskus.Web.JQuery

  other-modules:

  build-depends:       
      base                      >= 4.9 && < 5
   ,  haskus-utils-compat
   ,  bytestring
   ,  text
   ,  clay
   ,  lucid
   ,  happstack-server
   ,  happstack-server-tls

  build-tools: 
  ghc-options:          -Wall
  default-language:     Haskell2010
  hs-source-dirs:       src/lib
