cabal-version:       2.4
name:                haskus-calculus
version:             1.1
synopsis:            Haskus calculus
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
homepage:            http://www.haskus.org
copyright:           Sylvain Henry 2019
category:            System
build-type:          Simple

description:
   Haskus calculus (lambda calculus, etc.)

source-repository head
  type: git
  location: git://github.com/haskus/packages.git

library
  exposed-modules:
    Haskus.Calculus.Concept.App
    Haskus.Calculus.Concept.Var
    Haskus.Calculus.Concept.Lambda
    Haskus.Calculus.Concept.Bind
    Haskus.Calculus.Concept.Literal
    Haskus.Calculus.PrettyPrint
    Haskus.Calculus.FreeVars
    Haskus.Calculus.ReplaceVar
    Haskus.Calculus.Lang.LC

    Haskus.Calculus.Samples

  other-modules:

  build-depends:       
      base                      >= 4.9 && < 5
   ,  haskus-base
   ,  containers

  ghc-options:          -Wall
  default-language:     Haskell2010
  hs-source-dirs:       src/lib

test-suite tests
   type:                exitcode-stdio-1.0
   main-is:             Main.hs
   hs-source-dirs:      src/tests
   ghc-options:         -Wall -threaded
   default-language:    Haskell2010

   build-depends:
         base
      ,  haskus-calculus
