cabal-version:       2.4
name:                haskus-graphics
version:             0.1
synopsis:            Haskus graphics
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
homepage:            http://www.haskus.org
copyright:           Sylvain Henry 2019
category:            System
build-type:          Simple

description:
   Haskus graphics library

source-repository head
  type: git
  location: git://github.com/haskus/packages.git

library
  exposed-modules:
    Haskus.Graphics.Picture
    Haskus.Graphics.Color

  other-modules:

  build-depends:       
      base                      >= 4.9 && < 5
   ,  haskus-utils-variant
   ,  haskus-utils-types
   ,  haskus-binary
   ,  containers

  ghc-options:          -Wall
  default-language:     Haskell2010
  hs-source-dirs:       src/lib
