name:                haskus-locale
version:             0.1.0.0
synopsis:            Haskus locales
license:             BSD3
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
homepage:            http://www.haskus.org/system
copyright:           Sylvain Henry 2017
category:            System
build-type:          Simple
cabal-version:       >=1.20

description:
   Locale related modules

source-repository head
  type: git
  location: git://github.com/haskus/haskus-locale.git

library
  exposed-modules:
    Haskus.Locale.Country

  other-modules:

  build-depends:       
         base                      >= 4.9
      ,  text
      ,  cassava
      ,  bytestring
      ,  vector
      ,  template-haskell
      ,  haskus-utils-compat

  ghc-options:          -Wall
  default-language:     Haskell2010
  hs-source-dirs:       src/lib
